[tool.poetry]
name = "pkshap"
version = "0.1.0"
description = ""
authors = ["Janssena <alexanderjanssen@live.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.5.2"
shap = "^0.41.0"
xgboost = "^1.6.1"
numpy = "^1.23.0"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
